# FAQ-bot

./: .gitignore  README.md  SPEC.md  pyproject.toml
.github/workflows/: README.md  python-ci.yml
backend/: .gitignore  README.md  app.py  faq.csv  models.py
backend/api/: __init__.py  dependencies.py  error_handlers.py
backend/api/routes/: __init__.py  cache_routes.py  claude_routes.py  faq_routes.py  health_routes.py
backend/cli/: README.md  main.py  manage_cache.py  manage_faqs.py  query.py
backend/core/: __init__.py  claude_client.py  config.py  database.py  exceptions.py  faq.py  pending_changes.py  vector_store.py
backend/tests/: README.md  __init__.py  conftest.py  pytest.ini  test_app.py  test_cache_routes.py  test_claude_client.py  test_claude_routes.py  test_database.py  test_faq_manager.py  test_faq_routes.py  test_health_routes.py  test_pending_changes.py  test_vector_store.py
frontend/: .gitignore  .prettierignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/components/ui/: chat.tsx  dialog.tsx
frontend/src/hooks/: useTypewriter.ts
frontend/src/lib/: highlight.ts
frontend/src/styles/: ag-grid-theme.css
scripts/: setup-git-hooks.sh
